# NDSU2019

./: LICENSE  README.md
src/controls/competition/: package.xml
src/controls/dig_control/: package.xml
src/controls/waypoint_control/: package.xml
src/description/: package.xml
src/description/math/: backhoe_bucket_mapping.csv  linear_actuator_to_backhoe_mapping.csv
src/description/meshes/: backhoe_bucket.stl  backhoe_monoboom.stl  battery_box.stl  central_drive.stl  computer_box.stl  frame.stl  gravel_bucket.stl  left_flap.stl  left_tracker.stl  right_flap.stl  right_tracker.stl  tracker_camera.stl  wheel.stl
src/description/vrep_models/: arena.ttt  arena_with_floor.ttm  robot.ttm
src/hardware_layer/camera_calibration/: package.xml
src/hardware_layer/driver_access/: package.xml
src/hardware_layer/stepper/: package.xml
src/launch/: package.xml
src/navigation/navigation_msgs/: package.xml
src/navigation/tracker/: package.xml
src/simulation/vrep_msgs/: package.xml
src/simulation/vrep_plugin/: package.xml
src/utilities/: package.xml
