<?xml version="1.0"?>
<package format="2">
  <name>stepper</name>
  <version>0.0.0</version>
  <description>The stepper package</description>
  <maintainer email="jacob.huesman@ndsu.edu">jacob</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
